* added button to ignore low image resolution in validation dialog * added validation filter for ignored low image resolution errors * created api call to check for background items * added hasBackground call to renderDesktopUi * updated change background button styles * seperated changeBackground button on mobile from getMobileUiButtons * updated properties validation on renderDesktopUi * excluded background-button from getPropertyControl * put in the new feature image formField to getPropertyControl as "image-id" * updated image scale control * included _forMobile flag to getStepsBadgeList function * removed validation label for images / image upload button * updated getImageUploadControl in regards of scale and number of properties present * fixed image upload & progress bar visibilites for no auto assign cases * upaded renderMyImagesTab ** added dragDropHint ** updated distribute images button ** created image in use & delete image icons to image thumbs * updated heights for control host on mobile (getMobileControlHeightClass)

--- a/custom-ui/bs-layout.css
+++ b/custom-ui/bs-layout.css
@@ -395,6 +395,36 @@ input[type='range'] {
   width: 100%;
 }
 
+.image-inuse-checker {
+  width: 28px;
+  height: 28px;
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  color: #6aad00;
+  background-color: white;
+  border-radius: 4px;
+  box-shadow: 2px 2px black;
+}
+
+.delete-btn {
+  display: none;
+  width: 28px;
+  height: 28px;
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  color: #ad1700;
+  background-color: white;
+  border-radius: 4px;
+  box-shadow: 2px 2px black;
+  cursor: pointer;
+}
+
+div.big:hover > .delete-btn {
+  display: block;
+}
+
 .text-properties {
   display: flex;
   flex-direction: row;
@@ -645,6 +675,10 @@ input[type='range'] {
 .no-mobile-button-bar .mobile-control-host {
   /* add additional padding to control host, to increase space between control and back arrow */
   padding-top: 30px;
+}
+
+.no-mobile-button-bar .mobile-control-sm {
+  height: 100px;
 }
 
 .mobile-control-host > .list-group {
